--- a/test.ipynb
+++ b/test.ipynb
@@ -2,20 +2,138 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "oknrsr\n"
+      "Sai\n",
+      "18\n",
+      "OHOHOHOHOHHHHOOOOOOO\n",
+      "1UwU2UwU3\n",
+      "False\n",
+      "True\n"
      ]
     }
    ],
    "source": [
-    "print(\"oknrsr\")"
+    "print(\"Sai\")\n",
+    "print(\"18\")\n",
+    "print(\"OHOHOHOHOHHHHOOOOOOO\")\n",
+    "\n",
+    "print(\"1\", \"2\", \"3\", sep=\"UwU\")\n",
+    "\n",
+    "print(isinstance(1, bool))\n",
+    "print(1 == True)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Variables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# userName = input(\"What is your name?\")\n",
+    "# print(\"Sup!\", userName)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Type Casting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = int(3.5)\n",
+    "x = int(3.9999)\n",
+    "# x = int('-3.5')\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "y = bool(3)\n",
+    "print(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "z = bool('Snoop')\n",
+    "z = bool(None)\n",
+    "z = bool('')\n",
+    "print(z)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'string in string in string in string'\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(str(\"'\"'string in string in string in string'\"'\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
