--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -130,10 +130,204 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2916.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 9\n",
+    "\n",
+    "x += 1\n",
+    "x -= 1\n",
+    "x *= 3\n",
+    "x /= 0.5\n",
+    "x **= 2\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Logical opertors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "not True\n",
+    "okay = not (True or False) and (False and False)\n",
+    "print(okay)\n",
+    "print(4 > 3 and 69 == int('69'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "3 > 4\n",
+    "3 < 4\n",
+    "3 >= 4\n",
+    "3 <= 4\n",
+    "3 == 4\n",
+    "3 != 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "4 > 2 > 1 < 69 == 69 > 8 # Nice"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## More"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "89\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = int(input(\"Put something 1 - \"))\n",
+    "y = int(input(\"Put something 2 - \"))\n",
+    "result = x + y\n",
+    "\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Celsius': 26.85, 'Fahrenheit': 80.33, 'Kelvin': 300.0}\n"
+     ]
+    }
+   ],
+   "source": [
+    "user_temperature = float(input(\"Enter the temperature  - \"))\n",
+    "user_unit = input(\"Enter the temperature unit (C, F, or K) - \")\n",
+    "\n",
+    "if user_unit.upper() == 'C':\n",
+    "    celsius = user_temperature\n",
+    "elif user_unit.upper() == 'F':\n",
+    "    celsius = (user_temperature - 32) * 5 / 9\n",
+    "elif user_unit.upper() == 'K':\n",
+    "    celsius = user_temperature - 273.15\n",
+    "else:\n",
+    "    print('Invalid unit :(')\n",
+    "\n",
+    "\n",
+    "fahrenheit = (celsius * 9/5) + 32\n",
+    "kelvin = celsius + 273.15\n",
+    "\n",
+    "result = {\n",
+    "    'Celsius': round(celsius, 2),\n",
+    "    'Fahrenheit': round(fahrenheit, 2),\n",
+    "    'Kelvin': round(kelvin, 2)\n",
+    "}\n",
+    "\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "900"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "round(889,-2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Turle (Late Ninja)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import turtle\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
