--- a/test.ipynb
+++ b/test.ipynb
@@ -634,10 +634,161 @@
     "\n",
     "for i in range(len(s)//2):\n",
     "    if (s[i] != s[-(i + 1)]):\n",
-    "        isP= False\n",
+    "        isP = False\n",
     "    \n",
-    "print(\"YES\" if isP else \"NO\")\n",
-    "    "
+    "if(isP):\n",
+    "    print(\"YES\")\n",
+    "else:\n",
+    "    print(\"NO\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "        .--.\n",
+      "       |o_o |\n",
+      "       |:_/ |\n",
+      "      //   \\      (|     | )\n",
+      "    /'\\_   _/`\\\n",
+      "    \\___)=(___/\n",
+      "    \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<>:2: SyntaxWarning: invalid escape sequence '\\ '\n",
+      "<>:2: SyntaxWarning: invalid escape sequence '\\ '\n",
+      "/var/folders/79/2c2f5dkd1893h2s3blxl5j_h0000gn/T/ipykernel_3073/3677775949.py:2: SyntaxWarning: invalid escape sequence '\\ '\n",
+      "  tulip_art = \"\"\"\n"
+     ]
+    }
+   ],
+   "source": [
+    "def tulip():\n",
+    "    tulip_art = \"\"\"\n",
+    "        .--.\n",
+    "       |o_o |\n",
+    "       |:_/ |\n",
+    "      //   \\ \\\n",
+    "     (|     | )\n",
+    "    /'\\_   _/`\\\\\n",
+    "    \\___)=(___/\n",
+    "    \"\"\"\n",
+    "    print(tulip_art)\n",
+    "\n",
+    "tulip()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[4, 6, 543, 745]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l = [1,4,6,543,745,1]\n",
+    "\n",
+    "temp = []\n",
+    "for i in l:\n",
+    "    if i!= 1:\n",
+    "        temp.append(i)\n",
+    "temp"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Map"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 4, 9, 16, 25)\n"
+     ]
+    }
+   ],
+   "source": [
+    "def okay(n):\n",
+    "    return n ** 2\n",
+    "\n",
+    "l = [1,2,3,4,5]\n",
+    "res = tuple(map(okay,l))\n",
+    "\n",
+    "print(res)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['_', 'p', 'p', 'l', '_']"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# goal = set(\"apple\")\n",
+    "# current = set(\"pl\")\n",
+    "\n",
+    "# c = goal-current\n",
+    "\n",
+    "# goal_str = 'apple'\n",
+    "# temp = ''\n",
+    "\n",
+    "# for char in goal_str:\n",
+    "#     if char in c:\n",
+    "#         temp += '_'\n",
+    "#     else:\n",
+    "#         temp += char\n",
+    "\n",
+    "\n",
+    "def latestString(goalSet, goalString, currentCorrect):\n",
+    "    diff = goalSet - currentCorrect\n",
+    "    temp = []\n",
+    "\n",
+    "    for char in goalString:\n",
+    "        if char in diff:\n",
+    "            temp.append('_')\n",
+    "        else:\n",
+    "            temp.append(char)\n",
+    "    return temp\n",
+    "\n",
+    "res = latestString(set(\"apple\"), \"apple\", set(\"pl\"))\n",
+    "res\n"
    ]
   }
  ],
